# fhe-gpu

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/ckks/: Cargo.toml
crates/ckks/src/: error.rs  lib.rs
crates/ckks/src/core/: ciphertext.rs  keys.rs  mod.rs  params.rs  plaintext.rs
crates/ckks/src/crypto/: decrypt.rs  encrypt.rs  keygen.rs  mod.rs
crates/ckks/src/encoding/: encoder.rs  mod.rs  slots.rs
crates/ckks/src/eval/: add.rs  evaluator.rs  mod.rs  modswitch.rs  mul.rs  relin.rs  rescale.rs  rotate.rs
crates/fhe-compiler/: Cargo.toml
crates/fhe-compiler/src/: difftest.rs  error.rs  lib.rs  lowering.rs  optimizer.rs  pipeline.rs
crates/fhe-ir/: Cargo.toml
crates/fhe-ir/src/: builder.rs  error.rs  graph.rs  lib.rs  node.rs  types.rs
crates/fhe-ir/src/passes/: dead_code.rs  level_assign.rs  mod.rs  rescale_insert.rs
crates/fhe-math/: Cargo.toml
crates/fhe-math/src/: error.rs  lib.rs  modular.rs  ntt.rs  poly.rs  rns.rs
crates/fhe-testing/: Cargo.toml
crates/fhe-testing/src/: assertions.rs  fixtures.rs  generators.rs  lib.rs
docs/: 00-overview.md  01-math-foundations.md  02-ntt-impl.md  03-rns-arithmetic.md  04-ckks-encoding.md  05-ckks-keygen.md  06-ckks-encryption.md  07-ckks-ops.md  08-key-switching.md  09-ir-design.md  10-codegen.md  progress.md
docs/references/: chinese-resources.md  papers.md
oracle/: pyproject.toml
oracle/src/fhe_oracle/: __init__.py  ckks_oracle.py  params.py  serialization.py
scripts/: run_difftest.sh
tests/: integration_difftest.rs  integration_encode.rs  integration_encrypt.rs  integration_ops.rs
