[package]
name        = "fhe-compiler"
version.workspace = true
edition.workspace = true

[dependencies]
fhe-ir     = { workspace = true }
ckks       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
fhe-testing = { workspace = true }
