[package]
name        = "fhe-math"
version.workspace = true
edition.workspace = true

[dependencies]
concrete-ntt = { workspace = true }
num-complex  = { workspace = true }
thiserror    = { workspace = true }
rand         = { workspace = true }
serde        = { workspace = true }

[dev-dependencies]
fhe-testing = { workspace = true }
